--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Global body styles */
-body {
-  background-color: #ededed; /* Default light background */
-  transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and text color */
-  color: #000; /* Default dark text color */
-}
+
 
 /* Dark mode styles */
 .dark {
@@ -17,16 +12,7 @@ body {
 
 /* Light mode styles */
 .light {
-  background-color: #ffffff; /* Light background */
+  background-color: #ededed; /* Light background */
   color: #000000; /* Dark text color */
 }
 
-body {
-  background-color: #ededed;
-  transition: background-color 0.3s ease;
-}
-
-.dark {
-  background-color: #1a1a1a; /* Dark background */
-  color: #ffffff; /* Light text color */
-}
